[gd_scene load_steps=23 format=3 uid="uid://ced2ynscdgy5e"]

[ext_resource type="Theme" uid="uid://d12enup0x00h8" path="res://assets/ui/fonts/placeholder_theme.tres" id="1_ltqqh"]
[ext_resource type="Script" path="res://systems/card_combat/card_player.gd" id="1_y0ggj"]
[ext_resource type="PackedScene" uid="uid://d11sabcwtgmsp" path="res://systems/card_combat/hand.tscn" id="2_mif1c"]
[ext_resource type="PackedScene" uid="uid://blifmtx3ipelv" path="res://systems/card_combat/cards/hand_card.tscn" id="4_j51k8"]
[ext_resource type="Texture2D" uid="uid://c001k3rvpc4oo" path="res://assets/ui/gameboard/corner_1.png" id="5_di1ka"]
[ext_resource type="PackedScene" uid="uid://vnsgfexxjwpl" path="res://systems/card_combat/copy_of_card_stack.tscn" id="5_h5pty"]
[ext_resource type="Script" path="res://systems/ui/tooltips/show_tooltip.gd" id="5_l02yx"]
[ext_resource type="Texture2D" uid="uid://ca7vt6lror7v6" path="res://assets/ui/gameboard/karma.png" id="6_0bdpy"]
[ext_resource type="Texture2D" uid="uid://by4v5aq6yrqoh" path="res://assets/sprites/vfx/overlays/hurt_overlay.png" id="6_swmyn"]
[ext_resource type="Script" path="res://systems/card_combat/hurt_overlay.gd" id="7_k4gqe"]
[ext_resource type="Theme" path="res://assets/ui/themes/font_theme.tres" id="8_mh8am"]
[ext_resource type="Texture2D" uid="uid://b2oy1bhp7yy1h" path="res://assets/ui/gameboard/hb_2.png" id="8_nlbg8"]
[ext_resource type="Script" path="res://systems/effects/screenshake_cam.gd" id="8_y2d2q"]
[ext_resource type="Texture2D" uid="uid://oc76xjyw1lsm" path="res://assets/ui/gameboard/hb_1.png" id="9_nwmk5"]
[ext_resource type="Texture2D" uid="uid://qop14j0u0eqj" path="res://assets/ui/gameboard/heart_1.png" id="10_x5mo0"]
[ext_resource type="Texture2D" uid="uid://r2557aassu7" path="res://assets/ui/icons/broken_karma.png" id="12_6spwy"]
[ext_resource type="Texture2D" uid="uid://tj5tpqbagegc" path="res://assets/ui/icons/broken_karma_3.png" id="13_sqdsb"]
[ext_resource type="Texture2D" uid="uid://dwgvjd2verccg" path="res://assets/ui/icons/broken_karma_2.png" id="14_ubj71"]

[sub_resource type="Animation" id="Animation_n2ktt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(155, 137)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(116, 403)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:anchors_preset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_2x1mk"]
resource_name = "heartbeat"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(155, 137), Vector2(157, 139), Vector2(155, 137)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(116, 403)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:anchors_preset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tv3pq"]
_data = {
"RESET": SubResource("Animation_n2ktt"),
"heartbeat": SubResource("Animation_2x1mk")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fq2da"]

[node name="CardPlayer" type="ReferenceRect"]
custom_minimum_size = Vector2(300, 650)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ltqqh")
script = ExtResource("1_y0ggj")

[node name="Hand" parent="." instance=ExtResource("2_mif1c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(1042, 278)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
offset_left = -521.0
offset_top = -278.0
offset_right = 521.0
mouse_filter = 2
card_hidden_height = 150
show_rect = Rect2(0, 0.6, 1, 0.4)
render_rects = false

[node name="Deck" type="ReferenceRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -741.0
offset_top = -212.0
offset_right = -491.0
offset_bottom = 438.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
border_width = 0.0

[node name="CardStack" parent="Deck" node_paths=PackedStringArray("target") instance=ExtResource("5_h5pty")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 126.0
offset_top = 326.0
offset_right = 126.0
offset_bottom = 326.0
target = NodePath("../../Hand")
deckCardTemplate = ExtResource("4_j51k8")

[node name="ResourceContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -540.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="CornerBackground" type="TextureRect" parent="ResourceContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -628.0
offset_top = -624.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("5_di1ka")

[node name="Karma" type="TextureRect" parent="ResourceContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -212.0
offset_top = -191.9
offset_right = 0.00012207
offset_bottom = -3.90002
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_0bdpy")
flip_h = true
flip_v = true

[node name="KarmaLabel" type="Label" parent="ResourceContainer/Karma"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 10.9
offset_right = 1.0
offset_bottom = 10.9
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_mh8am")
theme_override_colors/font_outline_color = Color(0.623529, 0.294118, 0.705882, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/Karma"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -10.0
offset_right = -12.0001
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("5_l02yx")
title = "Your Karma"
text = "Cards on your side of the boards will add their
combined cost to your karma total each turn.
Whenever your karma would go below zero the excess
amount is substracted from your health instead."
hover_min_duration = 0.2

[node name="Health" type="Control" parent="ResourceContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="TextureProgressBar" parent="ResourceContainer/Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -628.0
offset_top = -624.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
value = 100.0
fill_mode = 5
texture_under = ExtResource("8_nlbg8")
texture_progress = ExtResource("9_nwmk5")
radial_initial_angle = 148.0
radial_fill_degrees = 51.0
radial_center_offset = Vector2(-270, -270)

[node name="HealthIcon" type="TextureRect" parent="ResourceContainer/Health"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 116.0
offset_top = 403.0
offset_right = 271.0
offset_bottom = 540.0
grow_vertical = 0
texture = ExtResource("10_x5mo0")

[node name="HealthLabel" type="Label" parent="ResourceContainer/Health/HealthIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -10.0
offset_right = 53.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_mh8am")
theme_override_colors/font_outline_color = Color(0.584314, 0.376471, 0.184314, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/Health/HealthIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("5_l02yx")
title = "Your Health"
text = "Is lowered whenever an enemy card attacks an empty tile.
If it drops to zero you'll die!"
hover_min_duration = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResourceContainer/Health/HealthIcon"]
libraries = {
"": SubResource("AnimationLibrary_tv3pq")
}
autoplay = "heartbeat"

[node name="BonusDrawButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = -224.0
offset_right = 356.0
offset_bottom = -124.0
grow_vertical = 0
texture_normal = ExtResource("12_6spwy")
texture_pressed = ExtResource("13_sqdsb")
texture_hover = ExtResource("14_ubj71")
texture_disabled = ExtResource("13_sqdsb")

[node name="Value" type="Label" parent="BonusDrawButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "-2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="BonusDrawButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("5_l02yx")
title = "Bonus Draw "
text = "Click here to exchange karma for an extra card."
hover_min_duration = 0.2

[node name="HurtOverlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_swmyn")
script = ExtResource("7_k4gqe")

[node name="ScreenshakeCamera2D" type="Camera2D" parent="."]
ignore_rotation = false
script = ExtResource("8_y2d2q")
noise = SubResource("FastNoiseLite_fq2da")
intensity = 10.0

[connection signal="mouse_entered" from="ResourceContainer/Karma/ShowTooltip" to="ResourceContainer/Karma/ShowTooltip" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ResourceContainer/Karma/ShowTooltip" to="ResourceContainer/Karma/ShowTooltip" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ResourceContainer/Health/HealthIcon/ShowTooltip" to="ResourceContainer/Health/HealthIcon/ShowTooltip" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ResourceContainer/Health/HealthIcon/ShowTooltip" to="ResourceContainer/Health/HealthIcon/ShowTooltip" method="_on_mouse_exited"]
[connection signal="button_down" from="BonusDrawButton" to="." method="_on_bonus_draw_button_button_down"]
[connection signal="mouse_entered" from="BonusDrawButton/ShowTooltip" to="BonusDrawButton/ShowTooltip" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BonusDrawButton/ShowTooltip" to="BonusDrawButton/ShowTooltip" method="_on_mouse_exited"]
